--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,23 +20,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file Service/pom.xml
-    - name: Test with Maven
-      run: mvn test --file Service/pom.xml
+
+    - name: Build and Test with Maven
+      run: mvn -B clean verify --file Service/pom.xml
 
   assign-reviewers:
+    needs: build
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
     steps:
-    - name: Assign reviewers
-      uses: kentaro-m/auto-assign-action@v1.2.0
+    - name: Assign Reviewers
+      uses: kentaro-m/auto-assign-action@v1.2.1
       with:
         reviewers: |
           code1word
