--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Service
+
+# MySQL connection configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/reservation_management
+spring.datasource.username=root
+spring.datasource.password=dbuserdbuser
+
+# JDBC driver for MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
