Modify application.properties with SQL instance info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Service
 
 # MySQL connection configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/reservation_management
+spring.datasource.url=jdbc:mysql://34.73.24.125:3306/reservation_management
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=dbuserdbuser
 
 # JDBC driver for MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
