--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=Service
 
 # MySQL connection configuration
+# Current IP address of Cloud SQL instance: 34.73.24.125
 spring.datasource.url=jdbc:mysql://34.73.24.125:3306/reservation_management
 spring.datasource.username=root
 spring.datasource.password=dbuserdbuser
