Inventory_Items junction table wrapper and unit tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=Service
 # MySQL connection configuration
 # Current IP address of Cloud SQL instance: 34.73.24.125
 spring.datasource.url=jdbc:mysql://34.73.24.125:3306/reservation_management
+#spring.datasource.url=jdbc:mysql://localhost:3306/reservation_management
 spring.datasource.username=root
 spring.datasource.password=dbuserdbuser
 
