--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=Service
 
 # MySQL connection configuration
+
 # Current IP address of Cloud SQL instance: 34.73.24.125
-spring.datasource.url=jdbc:mysql://34.73.24.125:3306/reservation_management
-#spring.datasource.url=jdbc:mysql://localhost:3306/reservation_management
+#spring.datasource.url=jdbc:mysql://34.73.24.125:3306/reservation_management
+
+# URL for MySQL DB for local testing
+spring.datasource.url=jdbc:mysql://localhost:3306/reservation_management
 spring.datasource.username=root
 spring.datasource.password=dbuserdbuser
 
