--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.datasource.password=dbuserdbuser
 # JDBC driver for MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.security.user.name=diego
+spring.security.user.password=diego123
+
