Users with ADMIN role can only hit DELETE routes. Added delete routes for inventory and users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.password=dbuserdbuser
 # JDBC driver for MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.security.user.name=diego
-spring.security.user.password=diego123
+# For security testing purposes
+# spring.security.user.name=diego
+# spring.security.user.password=diego123
 
