--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=Service
 
 # MySQL connection configuration
-# Current IP address of Cloud SQL instance: 34.73.24.125
-spring.datasource.url=jdbc:mysql://34.73.24.125:3306/reservation_management
-#spring.datasource.url=jdbc:mysql://localhost:3306/reservation_management
-spring.datasource.username=root
-spring.datasource.password=dbuserdbuser
+# URL for MySQL DB for local testing
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # JDBC driver for MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
